Fixing vertical align on commit buttons

--- a/sito/css/style.css
+++ b/sito/css/style.css
@@ -582,13 +582,10 @@ form>select {
     width: 80%;
     height: 50px;
     background: var(--main-theme-color);
-    justify-content: center;
-    display: flex;
     margin: 20px auto;
     padding: 10px;
     border: none;
     outline: none;
-    border-radius: 5px;
     font-size: 1.3em;
 }
 
@@ -596,22 +593,18 @@ input:focus {
     border: 2px solid;
     border-radius: 0.5rem;
     border-color: var(--main-title-color);
-    border-style: solid;
 }
 
 .commit_button {
     width: 60%;
-    height: 40px;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    display: block;
+    margin: 4% 0%;
+    height: 60px;
+    text-align: center;
+    text-decoration: solid;
     color: var(--main-title-color);
     background-color: #eff7e3;
     font-weight: bold;
     outline: none;
-    border: none;
-    border-radius: 5px;
     transition: .2s ease-in;
     cursor: pointer;
     font-size: 1.6em;
@@ -619,37 +612,26 @@ input:focus {
     border-radius: 0.5rem;
     border-color: var(--main-title-color);
     border-style: solid;
-}
-
-.commit_button {
-    margin-top: 4%;
-    height: 60px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    text-align: center;
-    text-decoration: solid;
+    align-items: center;
 }
 
 
 label {
     color: var(--main-title-color);
     font-size: 1.5em;
-    justify-content: center;
-    display: flex;
     margin-top: 5px;
     font-weight: bold;
     cursor: pointer;
     transition: .5s ease-in-out;
     text-align: center;
-
 }
 
 textarea {
     width: 80%;
     margin: auto;
     margin-top: 2%;
-    justify-content: center;
     display: block;
     overflow-y: scroll;
     height: 100px;
@@ -668,6 +650,7 @@ form {
     border-style: solid;
     justify-content: center;
     align-content: center;
+    align-items: center;
     background-color: #eff7e3;
 }
 
@@ -917,8 +900,6 @@ aside>h2 {
     .commit_button {
         margin: 2%;
         padding: 2%;
-        align-content: center;
-        justify-content: center;
     }
 
     /* Footer */
